<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginGuidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginGuidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/textInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toStartOf="@+id/loginGuidelineRight"
        app:layout_constraintStart_toStartOf="@+id/loginGuidelineLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/loginGuidelineRight"
        app:layout_constraintStart_toStartOf="@+id/loginGuidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/textInfoLabel"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/loginGuidelineRight"
        app:layout_constraintStart_toStartOf="@+id/loginGuidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/loginUsername"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@+id/loginGuidelineRight"
        app:layout_constraintStart_toStartOf="@+id/loginGuidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>